健壮性：CORS 改配置绑定并 trim、客户端输入错误归 400、日历缓存坏数据穿透
- CorsConfig 由 System.getenv 改为 @Value 注入（环境变量
  APP_CORS_ALLOWED_ORIGINS 经 relaxed binding 映射到 app.cors.allowed-origins），
  并对逐项 trim 过滤空串：配置写成 "http://a, http://b" 时带空格的
  原样 pattern 永远匹配不上，是一类静默失效
- GlobalExceptionHandler 新增 JSON 解析失败 / 路径变量类型不匹配 / 缺参 /
  媒体类型不支持 / 绑定错误五类，统一返回 400：属调用方问题，
  原先落到 500 会让错误监控被客户端噪音污染
- BangumiCalendarService 三层缓存改为解析成功才采用：内存或磁盘副本
  损坏时记 warn 并穿透到下一层，避免坏数据挤掉仍可用的旧数据

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>